--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>Annabell Rohweder</strong>, Mediengestalterin</h1>
+					<h1><strong>Annabell Rohweder</strong>, <strong>Mediengestalterin Konzeption und Visualisierung</strong> </h1>
 				</div>
 			</header>
 
@@ -27,10 +27,9 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Ipsum lorem dolor aliquam ante commodo<br />
-							magna sed accumsan arcu neque.</h2>
+							<h2>Über mich und meine Leidenschaften</h2>
 						</header>
-						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
+						<p>Ich habe meine Ausbildung zur Mediengestalterin mit Schwerpunkt Konzeption und Visualisierung abgeschlossen und seitdem die Möglichkeit gehabt, in nahezu jeden Bereich dieses umfassenden Berufes Erfahrungen zu sammeln. Von der Entwicklung von Marktanalysen und Unternehmenspositionierung über Kampagnenkonzepte bis hin zur Gestaltung von Logos, Social Media Beiträgen und Werbemittel. Und natürlich auch die Gestaltung von Druckmedien wie Flyer, Plakate, Anzeigen, Broschüren und Anleitungen.</p>
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
