--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>Annabell Rohweder</strong> </h1> <p>Mediengestalterin</p> 
+					<h1><strong>Annabell Rohweder</strong> </h1> <p>Mediengestalterin</p> <p>Konzeption und Visualisierung</p> 
 				</div>
 			</header>
 
