--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Über mich und meine Leidenschaften</h2>
+							<h2>Design ist meine Leidenschaft</h2>
 						</header>
 						<p>Ich habe meine Ausbildung zur Mediengestalterin mit Schwerpunkt Konzeption und Visualisierung abgeschlossen und seitdem die Möglichkeit gehabt, in nahezu jeden Bereich dieses umfassenden Berufes Erfahrungen zu sammeln. Von der Entwicklung von Marktanalysen und Unternehmenspositionierung über Kampagnenkonzepte bis hin zur Gestaltung von Logos, Social Media Beiträgen und Werbemittel. Und natürlich auch die Gestaltung von Druckmedien wie Flyer, Plakate, Anzeigen, Broschüren und Anleitungen.</p>
 						<ul class="actions">
