--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<p>2024</p> <li>&copy; Annabell Rohweder | Pixelbell. All rights reserved.</li>
+						<li> 2024 &copy; Annabell Rohweder | Pixelbell. All rights reserved.</li>
 					</ul>
 				</div>
 			</footer>
