--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
 									</li>
 									<li>
 										<h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
-										000-000-0000
+										015111115146
 									</li>
 									<li>
 										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<a href="#">hello@untitled.tld</a>
+										<a href="#">kontakt@pixelbell.de</a>
 									</li>
 								</ul>
 							</div>
