--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 				<!-- Three -->
 					<section id="three">
-						<h2>Lass uns anfangen</h2>
+						<h2>Schreib mir!</h2>
 						<div class="row">
 							<div class="col-8 col-12-small">
 								<form method="post" action="#">
@@ -88,7 +88,7 @@
 									</div>
 								</form>
 								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
+									<li><input type="submit" value="Lass uns anfangen" /></li>
 								</ul>
 							</div>
 							<div class="col-4 col-12-small">
