--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/IMG_1635.png" alt="" /></a>
+					<a href="#" class="image avatar"><img src="images/AnnabellRohweder_Logo.png" alt="" /></a>
 					<h1><strong>Annabell Rohweder</strong> </h1> <p>Mediengestalterin, Konzeption und Visualisierung</p>
 				</div>
 			</header>
