--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Design ist meine Leidenschaft</h2>
+							<h2>MeineLeidenschaft</h2>
 						</header>
 						<p></p>
 						<ul class="actions">
