--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 									</div>
 								</form>
 								<ul class="actions">
-									<li><input type="submit" value="senden" /></li>
+									<li><input type="submit" value="Senden" /></li>
 								</ul>
 							</div>
 							<div class="col-4 col-12-small">
